==> steup/contiki/dev/at86rf232/interface/cpu/SAM3/Generic/Src/pal.c <==
#include <stdio.h>
#include <stdint.h>
#include <stdbool.h>
#include "pal.h"
#include "pal_config.h"
#include "pal_timer.h"
#include "pal_internal.h"
#include "pal_flash.h"
#define ALL_INTERRUPTS_MASK         (0xFFFFFFFF)
#define MAX_INTERRUPT_SOURCES       (7)
#define WDT_CR_PASSWORD             (0xA5)

uint32_t pal_get_peripheral_clock_status(uint8_t peripheral_id)
{
#if (DEBUG > 0)
    ASSERT(peripheral_id < 35);
#endif
    if (peripheral_id < 32)
    {
        return (PMC->PMC_PCSR0 & (1 << peripheral_id));
    }
    else
    {
        return (PMC->PMC_PCSR1 & (1 << (peripheral_id - 32)));
    }
}

void pal_peripheral_clock_enable(uint8_t peripheral_id)
{
#if (DEBUG > 0)
    ASSERT(peripheral_id < 35);
#endif
    if (peripheral_id < 32)
    {
        if ((PMC->PMC_PCSR0 & (1 << peripheral_id)) == (1 << peripheral_id))
        {
            /* Already Enabled .Do nothing */
        }
        else
        {
            PMC->PMC_PCER0 = 1 << peripheral_id;
        }
    }
    else
    {
        peripheral_id -= 32;
        if ((PMC->PMC_PCSR1 & (1 << peripheral_id)) == (1 << peripheral_id))
        {
            /* Already Enabled .Do nothing */
        }
        else
        {
            PMC->PMC_PCER1 = 1 << peripheral_id;
        }
    }
}

void pal_peripheral_clock_disable(uint8_t peripheral_id)
{
#if (DEBUG > 0)
    ASSERT(peripheral_id < 35);
#endif
    if (peripheral_id < 32)
    {
        if ((PMC->PMC_PCSR0 & (1 << peripheral_id)) != (1 << peripheral_id))
        {
            /* Already Disabled .Do nothing */
        }
        else
        {
            PMC->PMC_PCDR0 = 1 << peripheral_id;
        }
    }
    else
    {
        peripheral_id -= 32;
        if ((PMC->PMC_PCSR1 & (1 << peripheral_id)) != (1 << peripheral_id))
        {
            /* Already Disabled .Do nothing */
        }
        else
        {
            PMC->PMC_PCDR1 = 1 << peripheral_id;
        }
    }
}

bool pal_pio_configure(const pin_t *list, uint32_t size)
{
    while (size > 0)
    {
        switch (list->type)
        {
            case PIO_PERIPH_A:
                pal_pio_setperiphA(list->pio,
                                   list->mask,
                                   (list->attribute & PIO_PULLUP) ? 1 : 0);
                break;
            case PIO_PERIPH_B:
                pal_pio_setperiphB(list->pio,
                                   list->mask,
                                   (list->attribute & PIO_PULLUP) ? 1 : 0);
                break;
            case PIO_PERIPH_C:
                pal_pio_setperiphC(list->pio,
                                   list->mask,
                                   (list->attribute & PIO_PULLUP) ? 1 : 0);
                break;
            case PIO_PERIPH_D:
                pal_pio_setperiphD(list->pio,
                                   list->mask,
                                   (list->attribute & PIO_PULLUP) ? 1 : 0);
                break;

            case PIO_INPUT:
                pal_peripheral_clock_enable(list->id);
                pal_pio_setinput(list->pio,
                                 list->mask,
                                 list->attribute);
                break;

            case PIO_OUTPUT_0:
            case PIO_OUTPUT_1:
                pal_pio_setoutput(list->pio,
                                  list->mask,
                                  (list->type == PIO_OUTPUT_1),
                                  (list->attribute & PIO_OPENDRAIN) ? 1 : 0,
                                  (list->attribute & PIO_PULLUP) ? 1 : 0);
                break;

            default:
                return 0;
        }

        list++;
        size--;
    }

    return 1;
}

static void pal_pio_setperiphA(Pio *pio, uint32_t mask, uint8_t enablePullUp)
{
    uint32_t abcdsr;

    /* Enable the pull-up(s) if necessary */
    if (enablePullUp)
    {
        pio->PIO_PUER = mask;
    }
    else
    {
        pio->PIO_PUDR = mask;
    }
    abcdsr = pio->PIO_ABCDSR[0];
    pio->PIO_ABCDSR[0] &= (~mask & abcdsr);
    abcdsr = pio->PIO_ABCDSR[1];
    pio->PIO_ABCDSR[1] &= (~mask & abcdsr);
    pio->PIO_PDR = mask;
}

static void pal_pio_setinput(Pio *pio, uint32_t mask, uint8_t attribute)
{
    /* Enable pull-up(s) if necessary */
    if (attribute & PIO_PULLUP)
    {
        pio->PIO_PUER = mask;
    }
    else
    {
        pio->PIO_PUDR = mask;
    }

    /* Enable de-glitch(s) if necessary */
    if (attribute & PIO_DEGLITCH)
    {
        pio->PIO_IFER = mask;
    }
    else
    {
        pio->PIO_IFDR = mask;
    }

    /* Enable de-bounce if necessary*/
    if (attribute & PIO_DEBOUNCE)
    {
        pio->PIO_IFSCER = mask; //pio->PIO_DIFSR = mask;
    }

    /* Configure pin as input */
    pio->PIO_ODR = mask;
    pio->PIO_PER = mask;
}

static void pal_pio_setoutput(Pio *pio, uint32_t mask, uint8_t defaultValue,
                              uint8_t enableMultiDrive,
                              uint8_t enablePullUp)
{
    /* Enable pull-up(s) if necessary */
    if (enablePullUp)
    {
        pio->PIO_PUER = mask;
    }
    else
    {
        pio->PIO_PUDR = mask;
    }

    /* Enable multi-drive if necessary */
    if (enableMultiDrive)
    {
        pio->PIO_MDER = mask;
    }
    else
    {
        pio->PIO_MDDR = mask;
    }

    if (defaultValue)
    {
        pio->PIO_SODR = mask;
    }
    else
    {
        pio->PIO_CODR = mask;
    }

    /* Configure pin(s) as output(s) */
    pio->PIO_OER = mask;
    pio->PIO_PER = mask;
}

bool pal_pio_get(const pin_t *pin)
{
    uint32_t reg;
    /* Check the pin type is an output and get the Data register*/
    if ((pin->type == PIO_OUTPUT_0) || (pin->type == PIO_OUTPUT_1))
    {
        reg = pin->pio->PIO_ODSR;
    }
    else
    {
        reg = pin->pio->PIO_PDSR;
    }
    /* Check the level of the pin */
    if ((reg & pin->mask) == 0)
    {
        return 0;
    }
    else
    {
        return 1;
    }
}

void pal_pio_initialize_interrupts(uint32_t priority)
{
    /* Reset sources */
    numSources = 0;

    /* Configure PIO interrupt sources of PIOA */
    pal_peripheral_clock_enable(ID_PIOA);
    PIOA->PIO_ISR;
    PIOA->PIO_IDR = ALL_INTERRUPTS_MASK;
    NVIC_DisableIRQ(PIOA_IRQn);
    NVIC_ClearPendingIRQ(PIOA_IRQn);
    NVIC_SetPriority(PIOA_IRQn, priority);
    NVIC_EnableIRQ(PIOA_IRQn);

    /* Configure PIO interrupt sources of PIOB */
    pal_peripheral_clock_enable(ID_PIOB);
    PIOB->PIO_ISR;
    PIOB->PIO_IDR = ALL_INTERRUPTS_MASK;
    NVIC_DisableIRQ(PIOB_IRQn);
    NVIC_ClearPendingIRQ(PIOB_IRQn);
    NVIC_SetPriority(PIOB_IRQn, priority);
    NVIC_EnableIRQ(PIOB_IRQn);

#ifdef __SAM3S4C__
    /* Configure PIO interrupt sources of PIOC */
    pal_peripheral_clock_enable(ID_PIOC);
    PIOC->PIO_ISR;
    PIOC->PIO_IDR = ALL_INTERRUPTS_MASK;
    NVIC_DisableIRQ(PIOC_IRQn);
    NVIC_ClearPendingIRQ(PIOC_IRQn);
    NVIC_SetPriority(PIOC_IRQn, priority);
    NVIC_EnableIRQ(PIOC_IRQn);
#endif
}

void pal_pio_configure_interrupt(const pin_t *pPin, void (*handler)(const pin_t *))
{
    uint8_t index;
    bool configured = false;
    Pio *pio = pPin->pio;
    interruptSource_t *pSource;

    /* Define new source */
    for (index = 0; index < numSources; index++)
    {
        if (pSources[index].pPin == pPin)
        {
            configured = true;
            pSources[index].pio_handler = handler;
        }
    }
    /* Check the pin already configured or not*/
    if (!configured)
    {
        pSource = &(pSources[numSources]);
        pSource->pPin = pPin;
        pSource->pio_handler = handler;
        numSources++;
    }
    /* PIO3 with additional interrupt support */
    /* Configure additional interrupt mode registers */
    if (pPin->attribute & PIO_IT_AIME)
    {
        /* Enable additional interrupt mode */
        pio->PIO_AIMER       = pPin->mask;

        /* if bit field of selected pin is 1, set as Rising Edge/High level
          detection event */
        if (pPin->attribute & PIO_IT_RE_OR_HL)
        {
            pio->PIO_REHLSR    = pPin->mask;
        }
        else
        {
            pio->PIO_FELLSR     = pPin->mask;
        }

        /* if bit field of selected pin is 1, set as edge detection source*/
        if (pPin->attribute & PIO_IT_EDGE)
        {
            pio->PIO_ESR     = pPin->mask;
        }
        else
        {
            pio->PIO_LSR     = pPin->mask;
        }
    }
    else
    {
        /* disable additional interrupt mode */
        pio->PIO_AIMDR       = pPin->mask;
    }
}

void pal_pio_interrupt_handler(uint32_t id, Pio *pPio)
{
    uint32_t status;
    uint32_t index;

    /* Read PIO controller status */
    status = pPio->PIO_ISR;
    status &= pPio->PIO_IMR;

    /* Check pending events */
    if (status != 0)
    {
        /* Find triggering source */
        index = 0;
        while (status != 0)
        {
            /* There cannot be an unconfigured source enabled */
            /* Source is configured on the same controller */
            if (pSources[index].pPin->id == id)
            {
                /* Source has PIOs whose status have changed */
                if ((status & pSources[index].pPin->mask) != 0)
                {
                    pSources[index].pio_handler(pSources[index].pPin);
                    status &= ~(pSources[index].pPin->mask);
                }
            }
            index++;
        }
    }
}

static void pal_wdt_init(void)
{

    Wdt *pWDT = WDT;
    /* Initialize the Watchdog - Disabled in debug mode

                             period in milliseconds * 256
    watdog counter value =  ------------------------------  - 1
                             1000
    */
    pWDT->WDT_MR = (((WDT_TIMEOUT_PERIOD << 8) / 1000) - 1) |
                   WDT_MR_WDRSTEN |
                   WDT_MR_WDDBGHLT |
                   WDT_MR_WDD;

}
