==> gexueyuan/cct/drivers/zigbee/coordinator/PAL/SAM3/Generic/Src/pal.c <==
#include <stdint.h>
#include <stdbool.h>
#include "pal.h"
#include "pal_config.h"
#include "pal_timer.h"
#include "pal_internal.h"
#include "pal_flash.h"
#include "app_uart.h"
#include "tal.h"
#include "tal_internal.h"
#include "Uz2400D.h"
#define ALL_INTERRUPTS_MASK         (0xFFFFFFFF)
#define MAX_INTERRUPT_SOURCES       (1)//7
#define WDT_CR_PASSWORD             (0xA5)

uint32_t pal_get_peripheral_clock_status(RCC_ClocksTypeDef  *RCC_Clocks)
{
#if (DEBUG > 0)
    ASSERT(peripheral_id < 35);
#endif
    RCC_GetClocksFreq(RCC_Clocks);
    return 1;
}

void pal_peripheral_clock_enable(uint8_t peripheral_id)
{
#if (DEBUG > 0)
    ASSERT(peripheral_id < 35);
#endif
    switch (peripheral_id)
    {
    case ID_PIOA:
#ifdef STM32F10X_MD      
      RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);
#elif defined (STM32F051)
      RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOA, ENABLE);      
#elif defined (STM32F4XX)
      RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOA, ENABLE);        
#endif      
      break;
    case ID_PIOB:
#ifdef STM32F10X_MD      
      RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB, ENABLE);
#elif defined (STM32F051)
      RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOB, ENABLE);      
#elif defined (STM32F4XX)
      RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOB, ENABLE);        
#endif        

      break;
    case ID_PIOC:
#ifdef STM32F10X_MD      
      RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOC, ENABLE);
#elif defined (STM32F051)
      RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOC, ENABLE);   
#elif defined (STM32F4XX)
      RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOC, ENABLE);        
#endif          

      break;
    case ID_PIOD:
#ifdef STM32F10X_MD      
      RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOD, ENABLE);
#elif defined (STM32F051)
      RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOD, ENABLE);   
#elif defined (STM32F4XX)
      RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOD, ENABLE);       
#endif          

      break;
    case ID_SPI:
#ifndef STM32F405xx    
       RCC_APB2PeriphClockCmd(RCC_APB2Periph_SPI1, ENABLE);
#else
       RCC_APB1PeriphClockCmd(RCC_APB1Periph_SPI3, ENABLE);
#endif
      break;
    case ID_TC2:
      RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM2, ENABLE);
    break;
    
    default:
    break;
      
      
    }
}

void pal_peripheral_clock_disable(uint32_t RCC_APB2Periph)
{
#if (DEBUG > 0)
    ASSERT(peripheral_id < 35);
#endif
    RCC_APB2PeriphClockCmd(RCC_APB2Periph, DISABLE);
}

bool pal_pio_configure(const pin_t *list, uint32_t size)
{
    while (size > 0)
    {
        switch (list->type)
        {
            case PIO_PERIPH_A:
            case PIO_PERIPH_B:              
            case PIO_PERIPH_C:
            case PIO_PERIPH_D:  
                pal_pio_setperiphA(list->pio,
                                   list->mask,
                                   (list->attribute));
                break;


            case PIO_INPUT:
                pal_pio_setinput(list->pio,
                                 list->mask,
                                 list->attribute);
                break;

            case PIO_OUTPUT_0:
                pal_pio_setoutput(list->pio,
                                  list->mask,
                                  (Bit_RESET),
                                  (list->attribute ));
                break;
            case PIO_OUTPUT_1:
                pal_pio_setoutput(list->pio,
                                  list->mask,
                                  (Bit_SET),
                                  (list->attribute ));
                break;

            default:
                return 0;
        }

        list++;
        size--;
    }

    return 1;
}

bool pal_pio_configure(const pin_t *list, uint32_t size)
{
    while (size > 0)
    {
        switch (list->type)
        {
            case PIO_PERIPH_A:
            case PIO_PERIPH_B:
            case PIO_PERIPH_C:
            case PIO_PERIPH_D:
                pal_pio_setperiphA(list->pio,
                                   list->mask,
                                   list->attribute,
                                   list->outType,
                                   list->pupdType);
                break;
   

            case PIO_INPUT:
                pal_pio_setinput(list->pio,
                                 list->mask,
                                 list->attribute);
                break;

            case PIO_OUTPUT_0:
                pal_pio_setoutput(list->pio,
                                  list->mask,
                                  (Bit_RESET),
                                  (list->attribute ));
                break;
            case PIO_OUTPUT_1:
                pal_pio_setoutput(list->pio,
                                  list->mask,
                                  (Bit_SET),
                                  (list->attribute ));
                break;

            default:
                return 0;
        }

        list++;
        size--;
    }

    return 1;
}

static void pal_pio_setperiphA(GPIO_TypeDef *pio, uint16_t mask, GPIOMode_TypeDef attribute)
{
    GPIO_InitTypeDef GPIO_InitStructure;

    GPIO_InitStructure.GPIO_Pin = mask;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;   

    GPIO_InitStructure.GPIO_Mode = attribute;

    GPIO_Init(pio, &GPIO_InitStructure);
}

static void pal_pio_setperiphA(GPIO_TypeDef *pio, uint16_t mask, GPIOMode_TypeDef attribute, GPIOOType_TypeDef outType, GPIOPuPd_TypeDef pupdType)
{
    GPIO_InitTypeDef GPIO_InitStructure;
    GPIO_InitStructure.GPIO_Pin = mask;
#ifdef STM32F4XX 
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;  
#else    
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;   
#endif    
    GPIO_InitStructure.GPIO_Mode = attribute;
    GPIO_InitStructure.GPIO_OType = outType;
    GPIO_InitStructure.GPIO_PuPd  = pupdType;
    GPIO_Init(pio, &GPIO_InitStructure);
}

static void pal_pio_setinput(GPIO_TypeDef *pio, uint16_t mask, GPIOMode_TypeDef attribute)
{
    GPIO_InitTypeDef GPIO_InitStructure;

    GPIO_InitStructure.GPIO_Pin = mask;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;   

    GPIO_InitStructure.GPIO_Mode = attribute;   
		GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
    GPIO_Init(pio, &GPIO_InitStructure);
}

static void pal_pio_setoutput(GPIO_TypeDef *pio, uint16_t mask, BitAction defaultValue,
                              GPIOMode_TypeDef enableMultiDrive)
{
    GPIO_InitTypeDef GPIO_InitStructure;

    GPIO_InitStructure.GPIO_Pin = mask;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;   

    GPIO_InitStructure.GPIO_Mode = enableMultiDrive;   

    GPIO_Init(pio, &GPIO_InitStructure);
    
    GPIO_WriteBit(pio, mask, defaultValue);
}

bool pal_pio_get(const pin_t *pin)
{
    uint32_t reg;
    /* Check the pin type is an output and get the Data register*/
    if ((pin->type == PIO_OUTPUT_0) || (pin->type == PIO_OUTPUT_1))
    {
        reg = pin->pio->ODR;
    }
    else
    {
        reg = pin->pio->IDR;
    }
    /* Check the level of the pin */
    if ((reg & pin->mask) == 0)
    {
        return 0;
    }
    else
    {
        return 1;
    }
}

void pal_pio_initialize_interrupts(uint32_t priority)
{
    /* Reset sources */
    //numSources = 0;
    NVIC_PriorityGroupConfig(NVIC_PriorityGroup_4); 
    
    NVIC_InitTypeDef NVIC_InitStructure;
    // 使能EXTI0中断 
#ifndef PA
    NVIC_InitStructure.NVIC_IRQChannel = EXTI3_IRQn; 
#else
#ifdef STM32F10X_MD      
    NVIC_InitStructure.NVIC_IRQChannel = EXTI2_IRQn;
#elif defined (STM32F051)
    NVIC_InitStructure.NVIC_IRQChannel = EXTI0_1_IRQn;   
#elif defined (STM32F4XX)
    NVIC_InitStructure.NVIC_IRQChannel = EXTI0_IRQn;         
#endif      
#endif
#if defined (STM32F10X_MD) || defined (STM32F4XX)
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = priority; // 指定抢占式优先级别1 
    
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0; // 指定响应优先级别0
#elif defined (STM32F051)
    NVIC_InitStructure.NVIC_IRQChannelPriority = priority; // 指定抢占式优先级别1     
#endif    
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE; 
    NVIC_Init(&NVIC_InitStructure); 
    
    // 使能EXTI9_5中断 
//    NVIC_InitStructure.NVIC_IRQChannel = EXTI9_5_IRQn; 
//    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 1; // 指定抢占式优先级别0 
//   // NVIC_InitStructure.NVIC_IRQChannelSubPriority = 0; // 指定响应优先级别1 
//   // NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE; 
//    NVIC_Init(&NVIC_InitStructure); 


    /* Configure PIO interrupt sources of PIOB */
//    pal_peripheral_clock_enable(ID_PIOB);
//    PIOB->PIO_ISR;
//    PIOB->PIO_IDR = ALL_INTERRUPTS_MASK;
//    NVIC_DisableIRQ(PIOB_IRQn);
//    NVIC_ClearPendingIRQ(PIOB_IRQn);
//    NVIC_SetPriority(PIOB_IRQn, priority);
//    NVIC_EnableIRQ(PIOB_IRQn);
//
//    /* Configure PIO interrupt sources of PIOC */
//    pal_peripheral_clock_enable(ID_PIOC);
//    PIOC->PIO_ISR;
//    PIOC->PIO_IDR = ALL_INTERRUPTS_MASK;
//    NVIC_DisableIRQ(PIOC_IRQn);
//    NVIC_ClearPendingIRQ(PIOC_IRQn);
//    NVIC_SetPriority(PIOC_IRQn, priority);
//    NVIC_EnableIRQ(PIOC_IRQn);
}

void pal_pio_configure_interrupt(const pin_t *pPin, void (*handler)(const pin_t *))
{
    uint8_t index;
    bool configured = false;
   // GPIO_TypeDef *pio = pPin->pio;
    interruptSource_t *pSource;

    /* Define new source */
    for (index = 0; index < numSources; index++)
    {
        if (pSources[index].pPin == pPin)
        {
            configured = true;
            pSources[index].pio_handler = handler;
        }
    }
    /* Check the pin already configured or not*/
    if (!configured)
    {
        pSource = &(pSources[numSources]);
        pSource->pPin = pPin;
        pSource->pio_handler = handler;
        numSources++;
    }
    EXTI_InitTypeDef EXTI_InitStruct;
#ifdef PA
#ifdef STM32F10X_CL
    GPIO_EXTILineConfig(GPIO_PortSourceGPIOD,GPIO_PinSource2);
#else
#ifdef    STM32F10X_MD
    GPIO_EXTILineConfig(GPIO_PortSourceGPIOB,GPIO_PinSource2);
#elif defined     (STM32F051) || defined (STM32F4XX)
  /* Enable SYSCFG clock */
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_SYSCFG, ENABLE);
  /* Connect EXTI0 Line to PA0 pin */
  SYSCFG_EXTILineConfig(EXTI_PortSourceGPIOB, EXTI_PinSource0);    
#endif  
#endif
#endif
    EXTI_InitStruct.EXTI_Line = pPin->mask;
    EXTI_InitStruct.EXTI_Mode = EXTI_Mode_Interrupt;
#ifdef ATMEL_RF
    EXTI_InitStruct.EXTI_Trigger = EXTI_Trigger_Rising;
#else
    EXTI_InitStruct.EXTI_Trigger = EXTI_Trigger_Falling;
#endif
    EXTI_InitStruct.EXTI_LineCmd = ENABLE;
    EXTI_Init(&EXTI_InitStruct);
    /* PIO3 with additional interrupt support */
    /* Configure additional interrupt mode registers */
//    if (pPin->attribute & PIO_IT_AIME)
//    {
//        /* Enable additional interrupt mode */
//        pio->PIO_AIMER       = pPin->mask;
//
//        /* if bit field of selected pin is 1, set as Rising Edge/High level
//          detection event */
//        if (pPin->attribute & PIO_IT_RE_OR_HL)
//        {
//            pio->PIO_REHLSR    = pPin->mask;
//        }
//        else
//        {
//            pio->PIO_FELLSR     = pPin->mask;
//        }
//
//        /* if bit field of selected pin is 1, set as edge detection source*/
//        if (pPin->attribute & PIO_IT_EDGE)
//        {
//            pio->PIO_ESR     = pPin->mask;
//        }
//        else
//        {
//            pio->PIO_LSR     = pPin->mask;
//        }
//    }
//    else
//    {
//        /* disable additional interrupt mode */
//        pio->PIO_AIMDR       = pPin->mask;
//    }
}

void pal_pio_interrupt_handler(uint32_t id, GPIO_TypeDef *pPio)
{
    uint32_t status;
    uint32_t index;

    /* Read PIO controller status */
    status =  EXTI->PR & EXTI_Line_All16;
    status &= EXTI->IMR;
#ifndef PA
    EXTI->PR = EXTI_Line3;
#else
#ifdef STM32F10X_MD    
    EXTI->PR = EXTI_Line2;
#elif defined (STM32F051) || defined (STM32F4XX)    
    EXTI->PR = EXTI_Line0;
#endif    
#endif
 //void GPIO_EXTILineConfig(uint8_t GPIO_PortSource, uint8_t GPIO_PinSource)     
      

    /* Check pending events */
    if (status != 0)
    {
        /* Find triggering source */
        index = 0;
        while (status != 0)
        {
            /* There cannot be an unconfigured source enabled */
            /* Source is configured on the same controller */
            if (pSources[index].pPin->id == id)//TODO last problem cloudm
            {
                /* Source has PIOs whose status have changed */
                if ((status & pSources[index].pPin->mask) != 0)
                {
                    pSources[index].pio_handler(pSources[index].pPin);
                    status &= ~(pSources[index].pPin->mask);
                }
            }
            index++;
        }
    }
}

static void pal_wdt_init(void)
{
	//启动独立看门狗
	 IWDG_WriteAccessCmd(IWDG_WriteAccess_Enable); //访问之前要首先使能寄存器写


	 IWDG_SetPrescaler(IWDG_Prescaler_64);//64分频 一个周期1.6ms
	 IWDG_SetReload(800);//最长12位 [0,4096] 800*1.6=1.28S
	 /* Reload IWDG counter */
	 IWDG_ReloadCounter();
	 IWDG_Enable();// Enable IWDG (the LSI oscillator will be enabled by hardware)
	 IWDG_WriteAccessCmd(IWDG_WriteAccess_Disable); //访问之前要首先使能寄存器写

	//因为独立看门狗使用的是LSI，所以最好程序启动的时候，使时钟源稳定:

	/* LSI的启动*/
	 RCC_LSICmd(ENABLE);//打开LSI
	 while(RCC_GetFlagStatus(RCC_FLAG_LSIRDY)==RESET);//等待直到LSI稳定
}
